--- a/cap02/exemplos/ex2.3/ex2.3.html
+++ b/cap02/exemplos/ex2.3/ex2.3.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br ">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
+    <h1>Revenda de Veículos</h1>
+    <form>
+        <p>Nome do veículo</p> <input type="text" name="vehicleName" id="vehicleName">
+
+        <p>Valor do veículo</p> <input type="number" name="vechiclePrice" id="vehiclePrice">
+
+        <input type="submit" value="Ver Promoção">
+    </form>
+
+    <pre id="res1"></pre>
+    <pre id="res2"></pre>
+    <pre id="res3"></pre>
     
 </body>
+<script src="ex2.3.js"></script>
 </html>
