--- a/cap04/exemplos/ex4.3/ex4.3.html
+++ b/cap04/exemplos/ex4.3/ex4.3.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,4 +8,5 @@
 <body>
     
 </body>
+<script src="ex4.3.js"></script>
 </html>
